@@ -1,9 +1,13 @@
+2012-08-17  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/nmakehlp.c: Add "-V<num>" option, in order to be able
+	to detect partial version numbers.
+
 2012-08-12  Jan Nijtmans <nijtmans@users.sf.net>
 
 	* configure:	Regenerated to use latest TEA tcl.m4.
 	* win/rules.vc: Remove some unused code, always set
 	USE_THREAD_ALLOC in combination with TCL_THREADS
-	
 
 2010-08-03  Stuart Cassoff  <stwo@users.sourceforge.net>
 
